# Redox

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/ast/: AST.h  CMakeLists.txt
src/codegen/: CMakeLists.txt  CodeGenerator.h
src/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h
src/lexer/Token/: Token.cpp  Token.h  TokenType.cpp  TokenType.h
src/parser/: CMakeLists.txt  Parser.h
src/semantic/: CMakeLists.txt  SemanticAnalyzer.h
src/utils/: CMakeLists.txt  Diagnostics.h
tests/lexer/: test_lexer.ox
